--- a/src/Components/ConnectSpotify/ConnectToSpotify.css
+++ b/src/Components/ConnectSpotify/ConnectToSpotify.css
@@ -1,6 +1,7 @@
-.ConnectSpotify {
+.ConnectToSpotify {
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 	margin: 4rem 0;
 }
 
