--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@ body {
 	width: 100vw;
 	padding: 2.5rem 4rem;
 	color: #fff;
-	background-color: #141514;
-	background: linear-gradient(
+	background-color: #121823;
+	/* background: linear-gradient(
 		180deg,
 		#1e1f1e 10%,
 		#141514 50%,
-	);
+	); */
 }
 
 html {
