--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -3,24 +3,8 @@
 	flex-direction: column;
 	width: 50%;
 	padding: 2rem 1.25rem;
-	background-color: #141514;
+	background-color: #161E2B;
 	border-radius: 8px;
-}
-
-.SearchResults {
-	&::-webkit-scrollbar {
-		width: 0.5rem;
-		height: 1rem;
-	}
-
-	&::-webkit-scrollbar-thumb {
-		background-color: hsl(120, 2%, 20%);
-		border-radius: 3px;
-
-		&:hover {
-			background: hsl(120, 2%, 20%);
-		}
-	}
 }
 
 .SearchResults h2 {
@@ -44,11 +28,11 @@
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background-color: hsl(120, 2%, 20%);
+		background-color: #263144;
 		border-radius: 3px;
 
 		&:hover {
-			background: hsl(120, 2%, 20%);
+			background: #263144;
 		}
 	}
 }
