--- a/src/Components/ConnectToSpotify/ConnectToSpotify.css
+++ b/src/Components/ConnectToSpotify/ConnectToSpotify.css
@@ -7,14 +7,15 @@
 
 .ConnectButton {
 	min-width: 12rem;
-	border: 1px solid #f1faf1;
 	border-radius: 32px;
-	background-color: #f1faf1;
 	padding: 0.75rem 1rem;
 	font-size: 0.9rem;
+	background-color: #121823;
+	color: #f1faf1;
+	border: 1px solid #f1faf1;
 }
 
 .ConnectButton:hover {
-	background-color: #121823;
-	color: #f1faf1;
+	color: #121823;
+	background-color: #f1faf1;
 }
