--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,7 +4,11 @@
 	align-items: end;
 	text-align: center;
 	height: 100px;
-	font-size: 0.85rem;
+	font-size: 0.75rem;
+}
+
+.Footer a {
+	text-decoration: underline;
 }
 
 .Footer i {
