--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -3,7 +3,8 @@
 	flex-direction: column;
 	align-items: center;
 	width: 45%;
-	max-height: 512px;
+	/* min-height: 512px;
+	max-height: 512px; */
 	overflow-y: scroll;
 	padding: 2rem 1.25rem;
 	background-color: #161E2B;
@@ -30,9 +31,8 @@
 	width: 100%;
 	border: 0;
 	outline: 0;
-	margin-bottom: 1rem;
+	margin-bottom: 1.5rem;
 	background: transparent;
-	border-bottom: 1px solid hsl(0, 0%, 100%);
 	font-family: "Poppins", sans-serif;
 	font-size: 1.5rem;
 	color: #fff;
