--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -20,19 +20,19 @@
 .SearchBar input:focus,
 .SearchBar input:hover {
   outline: none;
-  border: 1px solid #fff;
+  border: 1px solid #f8f9fa;
 }
 
 .SearchButton {
   position: absolute;
   right: 0;
   text-align: center;
+  font-size: 1rem;
   padding: 0.75rem 1rem;
   border-radius: 32px;
-  border: 1px solid #1ed760;
-  background-color: #1ed760;
-  color: #121823;
-  font-size: 1rem;
+  background-color: transparent;
+  color: #f8f9fa;
+  border: none;
   cursor: pointer;
 }
 
