--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .Footer {
 	display: flex;
 	justify-content: center;
-	align-items: end;
+	align-items: flex-end;
 	text-align: center;
 	height: 100px;
 	font-size: 0.75rem;
